Fixes navbar overlapping on eachother

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,8 @@
 .badge-repos a:visited {
   color: #FFFFFF
 }
+
+.fixed-top-2 {
+    position: sticky;
+    top: 57px;
+}
